--- a/demowebapi.conf
+++ b/demowebapi.conf
@@ -1,10 +1,16 @@
 server {
-    listen 80;
+    listen 443 ssl;
+
     server_name stepan-0x28.com;
+
+    ssl_certificate /etc/letsencrypt/live/stepan-0x28.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/stepan-0x28.com/privkey.pem;
 
     location /Demo-web-API-on-FastAPI-with-Swagger/ {
         rewrite /Demo-web-API-on-FastAPI-with-Swagger/(.*) /$1 break;
+
         proxy_pass http://demo-web-api:8000;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
